--- a/src/localhost.config
+++ b/src/localhost.config
@@ -1,3 +1,7 @@
+registyHostName=127.0.0.1
+registyPortNum=22210
+registyListeningPortNum=22211
+
 N_PLAYERS_TEAM=60
 N_PLAYERS_PUSHING=5
 N_TRIALS=6
