script for compile and run

--- a/src/localhost.config
+++ b/src/localhost.config
@@ -1,6 +1,6 @@
-registyHostName=127.0.0.1
-registyPortNum=22210
-registyListeningPortNum=22211
+REGISTRY_HOST_NAME=127.0.0.1
+REGISTRY_PORT_NUM=22210
+REGISTRY_LISTENING_PORT_NUM=22211
 
 N_PLAYERS_TEAM=60
 N_PLAYERS_PUSHING=5
@@ -8,8 +8,6 @@ N_TRIALS=6
 N_GAMES=30
 KNOCKOUT_DIF=12
 
-CONFIG_HOST_NAME=127.0.0.1
-CONFIG_PORT_NUM=9135
 
 REPO_HOST_NAME=127.0.0.1
 REPO_PORT_NUM=9136
