--- a/src/rg.config
+++ b/src/rg.config
@@ -1,8 +1,14 @@
-N_PLAYERS_TEAM=100
-N_PLAYERS_PUSHING=100
-N_TRIALS=10
-N_GAMES=5
+N_PLAYERS_TEAM=5
+N_PLAYERS_PUSHING=3
+N_TRIALS=6
+N_GAMES=3
 KNOCKOUT_DIF=8
+
+
+REGISTRY_HOST_NAME=l040101-ws07.ua.pt
+REGISTRY_PORT_NUM=22210
+REGISTRY_LISTENING_PORT_NUM=22211
+
 CONFIG_HOST_NAME=l040101-ws01.ua.pt
 CONFIG_PORT_NUM=22239
 REPO_HOST_NAME=l040101-ws02.ua.pt
